--- a/server/package.json
+++ b/server/package.json
@@ -50,7 +50,9 @@
     "axios": "0.21.0",
     "body-parser": "1.19.0",
     "connect-timeout": "1.9.0",
+    "cookie-parser": "1.4.5",
     "cors": "2.8.5",
+    "csurf": "^1.11.0",
     "dataloader": "2.0.0",
     "express": "5.0.0-alpha.8",
     "express-graphql": "0.11.0",
@@ -84,7 +86,9 @@
     "@babel/preset-typescript": "7.12.1",
     "@types/autocannon": "4.1.0",
     "@types/connect-timeout": "0.0.34",
+    "@types/cookie-parser": "1.4.2",
     "@types/cors": "2.8.8",
+    "@types/csurf": "1.11.0",
     "@types/dotenv-flow": "3.1.0",
     "@types/express": "4.17.9",
     "@types/express-list-endpoints": "4.0.1",
